--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "^3.2.0",
